--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@nestjs/common": "^11.0.1",
     "@nestjs/core": "^11.0.1",
     "@nestjs/mapped-types": "*",
+    "@nestjs/microservices": "^11.0.10",
     "@nestjs/platform-express": "^11.0.1",
     "@prisma/client": "^6.4.1",
     "class-transformer": "^0.5.1",
